feat(catalog): add allowed principal to basic stack
Add allowed principal ARN for user FooBar to the basic stack fixture
in the catalog usecase. This enhances the test fixture with principal
access control configuration.

--- a/test/fixtures/stacks/catalog/usecase/basic.yaml
+++ b/test/fixtures/stacks/catalog/usecase/basic.yaml
@@ -5,3 +5,5 @@ components:
         component: target
       vars:
         enabled: true
+        allowed_principal_arns:
+          - "arn:aws:iam::000000000000:user/ForBar"
